# socks

./: .gitignore  .readthedocs.yaml  Dockerfile  LICENSE  MANIFEST.in  README.md  __main__.py  run.sh  setup.cfg  setup.py
.jupyter/: jupyter_notebook_config.py
algorithms/: __init__.py
benchmarks/: __init__.py  _computation_timer.py  benchmark_cwh_problem.py  benchmark_maximal_stochastic_reachability.py  benchmark_stoch_reach.py  benchmark_tracking_problem.py  example_linear_id.py  example_monte_carlo.py  example_separating_kernel.py  experiment_matrix.py
docs/: bibliography.bib  conf.py  contributing.rst  custom_experiments.rst  custom_policies.rst  custom_sampling.rst  custom_systems.rst  environment.yaml  getting_started.rst  index.rst  installation.rst  requirements.txt  using_socks.rst
examples/: __init__.py  _computation_timer.py  benchmark_chance_constrained_problem.py  benchmark_chance_constrained_problem_pd.py  benchmark_cwh_problem.py  benchmark_maximal_stochastic_reachability.py  benchmark_obstacle_avoid_problem.py  benchmark_stochastic_reachability.py  benchmark_tracking_problem.py  example_linear_id.py  example_monte_carlo.py  example_separating_kernel.py  example_state_estimation.py  kernel_control.py  kernel_control_bwd.py  kernel_control_fwd.py  kernel_sr.py  kernel_sr_max.py  monte_carlo_sr.py  nonholonomic_bwd.py  nonholonomic_fwd.py
gym_basic/: __init__.py
gym_socks/: __init__.py
kernel/: __init__.py  metrics.py
kernel_basic/: kernel.py
systems/: __init__.py  sample.py
tests/: test_cwh.py  test_envs.py  test_integrator.py  (+3 more)
(+334 files in other folders)
