[metadata]
name = gym-socks
version = 0.1.0-alpha1
author = Adam Thorpe
author_email = ajthor@unm.edu
description = SOCKS: Stochastic Optimal Control using Kernel Methods
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ajthor/socks
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
docs_require =
    sphinx
    nbsphinx
    jupytext
    furo
    sphinx-autodoc-typehints
    sphinx-copybutton
    sphinx-design
    sphinxcontrib-bibtex

tests_require =
    pytest
    mock

install_requires =
    gym >= 0.18
    matplotlib >= 3.4
    numpy >= 1.18.0
    pyglet >= 1.4.0
    pyyaml >= 6.0
    sacred >= 0.8.2
    scikit-learn >= 1.0
    scipy >= 1.4.1
    tqdm >= 4.62.3

[options.packages.find]
exclude =
    tests
    tests.*
    benchmarks*
    examples*